# todo_FastAPI

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  task.md
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
api/: db.py  main.py  migrate_db.py
api/cruds/: task.py
api/models/: task.py
api/routers/: task.py
api/schemas/: task.py
